test/files/neg/t798.check
t798.scala:2: error: cyclic aliasing or subtyping involving type Bracks
trait Test[Bracks <: Bracks] {
           ^
one error found
